; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_ioapic.c_kvm_ioapic_clear_all.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_ioapic.c_kvm_ioapic_clear_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_ioapic = type { i32, i32* }

@KVM_IOAPIC_NUM_PINS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kvm_ioapic_clear_all(%struct.kvm_ioapic* %0, i32 %1) #0 {
  %3 = alloca %struct.kvm_ioapic*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.kvm_ioapic* %0, %struct.kvm_ioapic** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %3, align 8
  %7 = getelementptr inbounds %struct.kvm_ioapic, %struct.kvm_ioapic* %6, i32 0, i32 0
  %8 = call i32 @spin_lock(i32* %7)
  store i32 0, i32* %5, align 4
  br label %9

9:                                                ; preds = %22, %2
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @KVM_IOAPIC_NUM_PINS, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %9
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %3, align 8
  %16 = getelementptr inbounds %struct.kvm_ioapic, %struct.kvm_ioapic* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %17, i64 %19
  %21 = call i32 @__clear_bit(i32 %14, i32* %20)
  br label %22

22:                                               ; preds = %13
  %23 = load i32, i32* %5, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %5, align 4
  br label %9

25:                                               ; preds = %9
  %26 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %3, align 8
  %27 = getelementptr inbounds %struct.kvm_ioapic, %struct.kvm_ioapic* %26, i32 0, i32 0
  %28 = call i32 @spin_unlock(i32* %27)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @__clear_bit(i32, i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
